--- a/exam-editor.html
+++ b/exam-editor.html
@@ -781,15 +781,13 @@
             formData.append('file', compressedBlob, fileName);
 
             // 2. Upload
-            let response = await fetch("https://upload-helper.phamngockhanh-942001.workers.dev/", {
-                method: 'POST', body: formData
+            // 2. Upload (Dùng PUT ngay để tránh lỗi 405)
+            const response = await fetch("https://upload-helper.phamngockhanh-942001.workers.dev/", {
+                method: 'PUT', 
+                body: formData
             });
-            if (!response.ok) {
-                 response = await fetch("https://upload-helper.phamngockhanh-942001.workers.dev/", {
-                    method: 'PUT', body: formData
-                 });
-            }
-            if (!response.ok) throw new Error("Lỗi kết nối Server");
+
+            if (!response.ok) throw new Error(`Lỗi kết nối Server (${response.status})`);
             const data = await response.json();
             const url = data.url;
 
