--- a/dashboard.html
+++ b/dashboard.html
@@ -166,7 +166,9 @@
                         <button onclick="window.switchExplorerView('grid')" id="btnExpGrid" class="p-1.5 rounded text-blue-600 bg-white shadow-sm transition-all" title="Lưới"><i class="fa-solid fa-border-all"></i></button>
                         <button onclick="window.switchExplorerView('list')" id="btnExpList" class="p-1.5 rounded text-gray-400 hover:text-blue-600 transition-all" title="Danh sách"><i class="fa-solid fa-list"></i></button>
                     </div>
-                    
+                    <button onclick="window.location.href='dashboard-mapid.html'" class="px-3 py-2 bg-purple-100 text-purple-700 hover:bg-purple-200 rounded-lg text-xs md:text-sm font-bold transition-colors mr-1">
+                        <i class="fa-solid fa-folder-tree mr-1"></i> <span class="hidden md:inline">Cấu hình MapID</span>
+                    </button>
                     <button onclick="window.createNewFolder()" class="px-3 py-2 bg-yellow-100 text-yellow-700 hover:bg-yellow-200 rounded-lg text-xs md:text-sm font-bold transition-colors"><i class="fa-solid fa-folder-plus mr-1"></i> <span class="hidden md:inline">Tạo thư mục</span></button>
                     <button onclick="window.location.href='exam-editor.html'" class="px-3 py-2 bg-green-100 text-green-700 hover:bg-green-200 rounded-lg text-xs md:text-sm font-bold transition-colors"><i class="fa-solid fa-file-circle-plus mr-1"></i> <span class="hidden md:inline">Soạn đề mới</span><span class="md:hidden">Soạn đề</span></button>
                 </div>
