--- a/dashboard-mapid.html
+++ b/dashboard-mapid.html
@@ -106,14 +106,14 @@
 
     <input type="file" id="fileInput" accept=".txt" class="hidden">
 
-    <div id="toast" class="fixed top-5 right-5 z-50 transform translate-x-full transition-transform duration-300">
+    <div id="toast" class="fixed top-5 right-5 z-50 transform translate-x-full opacity-0 transition-all duration-300">
         <div class="bg-white border-l-4 border-green-500 shadow-xl rounded p-3 flex items-center gap-3">
-            <i class="fa-solid fa-check-circle text-green-500"></i>
+            <i class="fa-solid fa-check-circle text-green-500 text-xl"></i>
             <span class="text-sm font-bold text-gray-700" id="toastMsg">Success</span>
         </div>
     </div>
 
-    <script type="module" src="mapid-manager.js"></script>
+    <script type="module" src="mapid-manager.js?v=2.2"></script>
     <script>
         function copyID() {
             const text = document.getElementById('previewID').innerText;
