--- a/exam-editor.html
+++ b/exam-editor.html
@@ -1564,7 +1564,7 @@
             return str.match(regex) || [];
         }
 
-        window.saveExam = async function(status) {// --- HÀM LƯU ĐỀ THI (CHUẨN HÓA LOGIC THAM CHIẾU) ---
+        // --- HÀM LƯU ĐỀ THI (CHUẨN HÓA LOGIC THAM CHIẾU) ---
         window.saveExam = async function(status) { 
             if (window.currentQIndex !== -1) saveCurrentQuestionToMemory(); 
             
