--- a/dashboard.html
+++ b/dashboard.html
@@ -1402,7 +1402,9 @@
             } catch (e) { console.error(e); }
         };
     </script>
-    <div id="notificationPanel" class="hidden fixed top-16 right-4 md:left-64 md:top-auto md:bottom-20 md:right-auto z-[150] w-80 bg-white rounded-2xl shadow-2xl border border-gray-200 overflow-hidden animate-fade-in transform origin-top-right md:origin-bottom-left">
+    <div id="notificationPanel" class="hidden fixed z-[150] w-80 bg-white rounded-2xl shadow-2xl border border-gray-200 overflow-hidden animate-fade-in transform transition-all
+    top-16 right-2 origin-top-right
+    md:top-20 md:left-64 md:ml-4 md:right-auto md:origin-top-left">
         <div class="p-3 border-b border-gray-100 bg-blue-50 flex justify-between items-center">
             <h4 class="font-bold text-blue-800 text-sm"><i class="fa-solid fa-bell mr-2"></i>Thông báo mới</h4>
             <button onclick="toggleNotificationPanel()" class="text-gray-400 hover:text-red-500"><i class="fa-solid fa-times"></i></button>
