--- a/exam-editor.html
+++ b/exam-editor.html
@@ -2180,10 +2180,23 @@
                 window.showToast("Đã xóa sạch câu hỏi!", "success");
             }
         };
+        // --- HÀM QUAY LẠI THÔNG MINH (ĐÃ SỬA) ---
         window.handleBackNavigation = async () => {
             const hasUnsavedChanges = JSON.stringify(window.questions) !== JSON.stringify(window.originalQuestionsData);
             const hasPendingImages = sessionUploadedFiles.length > 0;
 
+            // 1. Xác định đích đến dựa trên URL hiện tại
+            const urlParams = new URLSearchParams(window.location.search);
+            const assignToClassId = urlParams.get('assignTo'); // Lấy ID lớp nếu đang giao bài
+            
+            let targetUrl = 'dashboard.html?view=exambank'; // Mặc định về Ngân hàng đề
+
+            if (assignToClassId) {
+                // Nếu đang soạn đề cho lớp -> Quay về chi tiết lớp đó, tab Bài tập
+                targetUrl = `dashboard.html?view=class_detail&id=${assignToClassId}&tab=exams`;
+            }
+
+            // 2. Kiểm tra dữ liệu chưa lưu
             if (hasUnsavedChanges || hasPendingImages) {
                 const confirmLeave = await window.customConfirm(
                     "Bạn chưa lưu thay đổi.\nNếu thoát bây giờ, các ảnh vừa tải lên sẽ bị XÓA BỎ VĨNH VIỄN.\nBạn có chắc chắn muốn thoát?"
@@ -2201,10 +2214,10 @@
                             sessionUploadedFiles = []; 
                         } catch(e) { console.log("Lỗi dọn dẹp:", e); }
                     }
-                    window.location.href = 'dashboard.html?view=exambank';
+                    window.location.href = targetUrl; // <--- Dùng biến targetUrl động
                 }
             } else {
-                window.location.href = 'dashboard.html?view=exambank';
+                window.location.href = targetUrl; // <--- Dùng biến targetUrl động
             }
         };
         
