--- a/exam-editor.html
+++ b/exam-editor.html
@@ -1433,14 +1433,15 @@
 
                 // --- [UPDATE] XỬ LÝ LÀM SẠCH LATEX THEO YÊU CẦU ---
                 // 1. Loại bỏ \, (khoảng trắng nhỏ gây lỗi hiển thị)
-                content = content.replaceAll("\\,", "");
-                
-                // 2. Loại bỏ môi trường multicols (Xóa tag, giữ nội dung bên trong)
+                // 2. Loại bỏ môi trường multicols (Xóa tag, giữ nội dung)
                 content = content.replace(/\\begin\{multicols\}\{.*?\}/g, "");
                 content = content.replace(/\\end\{multicols\}/g, "");
 
-                // 3. Sửa lỗi align* không hiển thị -> Chuyển thành align
-                content = content.replaceAll("{align*}", "{align}");
+                // 3. [FIX] Sửa lỗi align* -> Chuyển thành aligned và thêm $$ bao quanh
+                // Cách này đảm bảo MathJax nhận diện đúng là khối công thức
+                content = content.replace(/\\begin\{align\*\}([\s\S]*?)\\end\{align\*\}/g, (match, p1) => {
+                    return `$$ \\begin{aligned}${p1}\\end{aligned} $$`;
+                });
                 // ---------------------------------------------------
 
                 content = content.replace(/(?<!\\)%.*/g, '');
