--- a/practice.html
+++ b/practice.html
@@ -565,8 +565,31 @@
             updateSelectionStatus();
         };
 
-        // 2. Chọn con -> Cập nhật trạng thái đếm
-        window.handleCheckTree = (cb) => {
+        // 2. Xử lý logic chọn cây (Chọn Cha -> Chọn hết Con)
+        window.handleCheckTree = (el) => {
+            const isChecked = el.checked;
+
+            // Tìm thẻ <details> bao quanh checkbox này
+            const parentDetails = el.closest('details');
+
+            // Nếu checkbox này nằm trong <details> (tức là nó có thể là mục cha hoặc con)
+            if (parentDetails) {
+                const summary = parentDetails.querySelector('summary');
+                
+                // Kiểm tra: Nếu checkbox được click nằm ngay trong thẻ <summary> 
+                // => Nghĩa là người dùng đang click vào MỤC CHA
+                if (summary && summary.contains(el)) {
+                    // Tìm tất cả checkbox con nằm trong nội dung chi tiết của mục này
+                    // (Lưu ý: querySelectorAll sẽ tìm sâu xuống tất cả các cấp con cháu)
+                    const allChildCheckboxes = parentDetails.querySelectorAll('input[type="checkbox"]');
+                    
+                    allChildCheckboxes.forEach(cb => {
+                        cb.checked = isChecked;
+                    });
+                }
+            }
+
+            // Cập nhật số lượng đã chọn trên UI
             updateSelectionStatus();
         };
 
