--- a/student.html
+++ b/student.html
@@ -71,6 +71,10 @@
             <button onclick="switchTab('classes')" id="nav-classes" class="sidebar-item w-full text-left px-4 py-3 text-gray-600 flex items-center gap-3 transition-all rounded-xl"><i class="fa-solid fa-chalkboard-user w-5"></i> Lớp học của tôi</button>
             <button onclick="switchTab('history')" id="nav-history" class="sidebar-item w-full text-left px-4 py-3 text-gray-600 flex items-center gap-3 transition-all rounded-xl">
             <i class="fa-solid fa-clock-rotate-left w-5"></i> Lịch sử làm bài
+            </button
+            <button onclick="window.location.href='practice.html'" class="sidebar-item w-full text-left px-4 py-3 text-gray-600 flex items-center gap-3 transition-all rounded-xl group">
+                <div class="w-5 flex justify-center"><i class="fa-solid fa-brain text-indigo-500 group-hover:animate-bounce"></i></div>
+                <span class="font-bold text-indigo-600">Phòng Luyện Tập</span>
             </button>
             <div class="px-4 pt-4 pb-2 text-[10px] font-black text-gray-400 uppercase tracking-wider">Học liệu</div>
             <button onclick="switchTab('my-courses')" id="nav-my-courses" class="sidebar-item w-full text-left px-4 py-3 text-gray-600 flex items-center gap-3 transition-all rounded-xl"><i class="fa-solid fa-book-bookmark w-5"></i> Khóa học đã mua</button>
@@ -109,6 +113,39 @@
                     </div>
                     <div class="absolute right-0 top-0 h-full w-1/2 bg-gradient-to-l from-white/10 to-transparent skew-x-12 transform origin-top-right"></div>
                     <div class="absolute bottom-0 left-10 w-40 h-40 bg-teal-500/30 rounded-full blur-2xl"></div>
+                </div>
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+                    <div onclick="window.location.href='practice.html'" class="bg-white p-6 rounded-3xl shadow-lg shadow-indigo-100 border border-indigo-50 cursor-pointer hover:-translate-y-1 transition-all group relative overflow-hidden">
+                        <div class="absolute top-0 right-0 w-32 h-32 bg-indigo-50 rounded-bl-full -mr-10 -mt-10 transition-transform group-hover:scale-110"></div>
+                        <div class="relative z-10">
+                            <div class="flex justify-between items-start mb-4">
+                                <div class="w-14 h-14 bg-gradient-to-br from-indigo-500 to-purple-600 text-white rounded-2xl flex items-center justify-center text-2xl shadow-lg shadow-indigo-200 group-hover:scale-110 transition-transform duration-300">
+                                    <i class="fa-solid fa-brain"></i>
+                                </div>
+                                <span class="bg-red-100 text-red-600 text-[10px] font-black px-2.5 py-1 rounded-full uppercase tracking-wider animate-pulse">Mới</span>
+                            </div>
+                            
+                            <h3 class="text-xl font-black text-gray-800 mb-2 group-hover:text-indigo-600 transition-colors">Phòng Luyện Tập AI</h3>
+                            <p class="text-sm text-gray-500 leading-relaxed mb-6 font-medium">
+                                Ôn tập kiến thức theo chuyên đề, mức độ. Hệ thống tự động tạo đề thông minh giúp bạn bứt phá điểm số.
+                            </p>
+                            
+                            <div class="flex items-center text-indigo-600 font-bold text-sm bg-indigo-50 w-fit px-4 py-2 rounded-xl group-hover:bg-indigo-600 group-hover:text-white transition-all">
+                                <span>Bắt đầu ngay</span>
+                                <i class="fa-solid fa-arrow-right ml-2 transform group-hover:translate-x-1 transition-transform"></i>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="bg-white p-6 rounded-3xl shadow-sm border border-gray-100 flex items-center justify-center text-center opacity-60 grayscale hover:grayscale-0 hover:opacity-100 transition-all cursor-not-allowed">
+                        <div>
+                            <div class="w-14 h-14 mx-auto bg-gray-100 text-gray-400 rounded-2xl flex items-center justify-center text-2xl mb-4">
+                                <i class="fa-solid fa-trophy"></i>
+                            </div>
+                            <h3 class="text-lg font-bold text-gray-600">Bảng Xếp Hạng</h3>
+                            <p class="text-xs text-gray-400 mt-1">Tính năng đang phát triển...</p>
+                        </div>
+                    </div>
                 </div>
                 <div>
                     <h3 class="font-bold text-gray-800 text-xl mb-6 flex items-center gap-3"><span class="w-10 h-10 rounded-xl bg-orange-100 text-orange-600 flex items-center justify-center shadow-sm"><i class="fa-solid fa-bell"></i></span><span id="pendingTitle">Đang kiểm tra bài tập...</span></h3>
