--- a/student.html
+++ b/student.html
@@ -72,9 +72,8 @@
             <button onclick="switchTab('history')" id="nav-history" class="sidebar-item w-full text-left px-4 py-3 text-gray-600 flex items-center gap-3 transition-all rounded-xl">
             <i class="fa-solid fa-clock-rotate-left w-5"></i> Lịch sử làm bài
             </button
-            <button onclick="window.location.href='practice.html'" class="sidebar-item w-full text-left px-4 py-3 text-gray-600 flex items-center gap-3 transition-all rounded-xl group">
-                <div class="w-5 flex justify-center"><i class="fa-solid fa-brain text-indigo-500 group-hover:animate-bounce"></i></div>
-                <span class="font-bold text-indigo-600">Phòng Luyện Tập</span>
+            <button onclick="window.location.href='practice.html'" id="nav-practice" class="sidebar-item w-full text-left px-4 py-3 text-gray-600 flex items-center gap-3 transition-all rounded-xl">
+                <i class="fa-solid fa-brain w-5"></i> Phòng Luyện Tập
             </button>
             <div class="px-4 pt-4 pb-2 text-[10px] font-black text-gray-400 uppercase tracking-wider">Học liệu</div>
             <button onclick="switchTab('my-courses')" id="nav-my-courses" class="sidebar-item w-full text-left px-4 py-3 text-gray-600 flex items-center gap-3 transition-all rounded-xl"><i class="fa-solid fa-book-bookmark w-5"></i> Khóa học đã mua</button>
