Refine tutorial modal styles
Updated styles for the tutorial modal overlay and content box.

--- a/practice.html
+++ b/practice.html
@@ -96,34 +96,24 @@
         }
         .tree-item:hover { background-color: #EFF6FF; }
         .tree-item:hover .map-text { color: #2563EB; font-weight: 600; }
-        /* --- FIX LỖI MODAL HƯỚNG DẪN (TUTORIAL) --- */
-        .tutorial-overlay { 
-            background-color: rgba(0, 0, 0, 0.85) !important; /* Nền tối đậm hơn để che nội dung dưới */
-            backdrop-filter: blur(8px); /* Làm mờ nền phía sau */
-            z-index: 9999 !important; /* Đảm bảo nằm trên cùng */
-            position: fixed;
+
+        /* --- [FIX] STYLE CHO MODAL HƯỚNG DẪN --- */
+        .tutorial-overlay {
+            background-color: rgba(0, 0, 0, 0.85) !important; /* Nền đen mờ đậm che nội dung dưới */
+            backdrop-filter: blur(5px); /* Làm mờ hậu cảnh */
+            z-index: 9999 !important; /* Đảm bảo nằm trên cùng (cao hơn Header) */
+            position: fixed; /* Cố định toàn màn hình */
             top: 0; left: 0; right: 0; bottom: 0;
         }
         
-        /* Đảm bảo hộp thoại nội dung modal có nền trắng đặc và nổi bật */
+        /* Đảm bảo hộp thoại nội dung có nền trắng và nổi bật */
         #tutorialModal > div {
-            background-color: #ffffff !important; 
-            z-index: 10000; /* Cao hơn overlay */
+            background-color: #ffffff !important;
+            opacity: 1 !important;
             position: relative;
-            opacity: 1 !important; /* Đảm bảo không bị trong suốt */
-            box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.5); /* Đổ bóng sâu */
+            z-index: 10000;
+            box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
         }
-
-        /* Thêm style cho nút đóng nếu cần */
-        .close-tutorial-btn {
-            position: absolute;
-            top: 1rem;
-            right: 1rem;
-            color: #9ca3af;
-            cursor: pointer;
-            transition: color 0.2s;
-        }
-        .close-tutorial-btn:hover { color: #ef4444; }
     </style>
 </head>
 <body class="min-h-screen flex flex-col text-gray-800">
