--- a/student.html
+++ b/student.html
@@ -70,12 +70,10 @@
             <button onclick="switchTab('dashboard')" id="nav-dashboard" class="sidebar-item active w-full text-left px-4 py-3 text-gray-600 flex items-center gap-3 transition-all rounded-xl"><i class="fa-solid fa-home w-5"></i> Sảnh chính</button>
             <button onclick="switchTab('classes')" id="nav-classes" class="sidebar-item w-full text-left px-4 py-3 text-gray-600 flex items-center gap-3 transition-all rounded-xl"><i class="fa-solid fa-chalkboard-user w-5"></i> Lớp học của tôi</button>
             <button onclick="switchTab('history')" id="nav-history" class="sidebar-item w-full text-left px-4 py-3 text-gray-600 flex items-center gap-3 transition-all rounded-xl">
-            <i class="fa-solid fa-clock-rotate-left w-5"></i> Lịch sử làm bài
-            </button
-            <button onclick="window.location.href='practice.html'" class="sidebar-item w-full text-left px-4 py-3 text-gray-600 flex items-center gap-3 transition-all rounded-xl hover:bg-teal-50 hover:text-teal-700">
-    <i class="fa-solid fa-brain w-5 text-center"></i>
-    <span>Phòng Luyện Tập</span>
-</button>
+                <i class="fa-solid fa-clock-rotate-left w-5"></i> Lịch sử làm bài
+            </button> <button onclick="window.location.href='practice.html'" class="sidebar-item w-full text-left px-4 py-3 text-gray-600 flex items-center gap-3 transition-all rounded-xl hover:bg-teal-50 hover:text-teal-700">
+                <i class="fa-solid fa-brain w-5 text-center"></i> Phòng Luyện Tập
+            </button>
             <div class="px-4 pt-4 pb-2 text-[10px] font-black text-gray-400 uppercase tracking-wider">Học liệu</div>
             <button onclick="switchTab('my-courses')" id="nav-my-courses" class="sidebar-item w-full text-left px-4 py-3 text-gray-600 flex items-center gap-3 transition-all rounded-xl"><i class="fa-solid fa-book-bookmark w-5"></i> Khóa học đã mua</button>
             <button onclick="switchTab('market')" id="nav-market" class="sidebar-item w-full text-left px-4 py-3 text-gray-600 flex items-center gap-3 transition-all rounded-xl"><i class="fa-solid fa-store w-5"></i> Đăng ký khóa mới</button>
