--- a/student.html
+++ b/student.html
@@ -71,8 +71,8 @@
             <button onclick="switchTab('classes')" id="nav-classes" class="sidebar-item w-full text-left px-4 py-3 text-gray-600 flex items-center gap-3 transition-all rounded-xl"><i class="fa-solid fa-chalkboard-user w-5"></i> Lớp học của tôi</button>
             <button onclick="switchTab('history')" id="nav-history" class="sidebar-item w-full text-left px-4 py-3 text-gray-600 flex items-center gap-3 transition-all rounded-xl">
                 <i class="fa-solid fa-clock-rotate-left w-5"></i> Lịch sử làm bài
-            </button> <button onclick="window.location.href='practice.html'" class="sidebar-item w-full text-left px-4 py-3 text-gray-600 flex items-center gap-3 transition-all rounded-xl hover:bg-teal-50 hover:text-teal-700">
-                <i class="fa-solid fa-brain w-5 text-center"></i> Phòng Luyện Tập
+            </button> <button onclick="switchTab('practice'); loadStudentPracticeHistory()" id="nav-practice" class="sidebar-item w-full text-left px-4 py-3 text-gray-600 flex items-center gap-3 transition-all rounded-xl hover:bg-teal-50 hover:text-teal-700">
+                <i class="fa-solid fa-brain w-5 text-center"></i> <span>Phòng Luyện Tập</span>
             </button>
             <div class="px-4 pt-4 pb-2 text-[10px] font-black text-gray-400 uppercase tracking-wider">Học liệu</div>
             <button onclick="switchTab('my-courses')" id="nav-my-courses" class="sidebar-item w-full text-left px-4 py-3 text-gray-600 flex items-center gap-3 transition-all rounded-xl"><i class="fa-solid fa-book-bookmark w-5"></i> Khóa học đã mua</button>
@@ -153,8 +153,61 @@
                 </div>
             </div>
 
+            <div id="tab-practice" class="tab-content hidden animate-fade-in">
+                <div class="mb-6">
+                    <h2 class="text-3xl font-black text-gray-800 mb-2">Phòng Luyện Tập AI</h2>
+                    <p class="text-gray-500">Rèn luyện kỹ năng Toán học với ngân hàng câu hỏi thông minh</p>
+                </div>
+
+                <div class="grid grid-cols-1 lg:grid-cols-3 gap-8">
+                    <div class="lg:col-span-1">
+                        <div onclick="window.location.href='practice.html'" class="bg-gradient-to-br from-indigo-600 to-purple-700 rounded-3xl p-8 text-white shadow-xl shadow-indigo-200 relative overflow-hidden h-full flex flex-col justify-center items-center text-center group cursor-pointer border border-indigo-500 transition-transform hover:-translate-y-1">
+                            <div class="absolute top-0 right-0 w-40 h-40 bg-white opacity-10 rounded-full -mr-10 -mt-10 group-hover:scale-150 transition-transform duration-700"></div>
+                            
+                            <div class="relative z-10">
+                                <div class="w-20 h-20 bg-white/20 backdrop-blur-sm rounded-2xl flex items-center justify-center mx-auto mb-6 shadow-inner border border-white/30 group-hover:bg-white group-hover:text-indigo-600 transition-colors">
+                                    <i class="fa-solid fa-rocket text-4xl"></i>
+                                </div>
+                                <h3 class="text-2xl font-black mb-2">Bắt đầu Luyện tập</h3>
+                                <p class="text-indigo-100 text-sm mb-8 font-medium">Tự động tạo đề thi theo chuyên đề, mức độ hoặc ngẫu nhiên.</p>
+                                <button class="px-8 py-3 bg-white text-indigo-700 font-bold rounded-xl shadow-lg hover:bg-indigo-50 transition-all w-full flex items-center justify-center gap-2">
+                                    Vào ngay <i class="fa-solid fa-arrow-right"></i>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="lg:col-span-2 flex flex-col">
+                        <div class="bg-white rounded-3xl shadow-sm border border-gray-200 flex-1 overflow-hidden flex flex-col h-[500px]">
+                            <div class="p-5 border-b border-gray-100 flex justify-between items-center bg-gray-50">
+                                <h3 class="font-bold text-gray-800 flex items-center gap-2">
+                                    <i class="fa-solid fa-clock-rotate-left text-indigo-600"></i> Lịch sử Luyện tập
+                                </h3>
+                                <button onclick="loadStudentPracticeHistory()" class="w-8 h-8 rounded-full bg-white border border-gray-200 text-gray-400 hover:text-indigo-600 hover:border-indigo-200 flex items-center justify-center transition-all" title="Làm mới">
+                                    <i class="fa-solid fa-rotate"></i>
+                                </button>
+                            </div>
+                            <div class="flex-1 overflow-y-auto custom-scrollbar p-0">
+                                <table class="w-full text-left text-sm">
+                                    <thead class="bg-white sticky top-0 z-10 shadow-sm text-xs font-bold text-gray-500 uppercase tracking-wider">
+                                        <tr>
+                                            <th class="p-4 border-b border-gray-100">Thời gian</th>
+                                            <th class="p-4 border-b border-gray-100">Nội dung</th>
+                                            <th class="p-4 border-b border-gray-100 text-center">Kết quả</th>
+                                            <th class="p-4 border-b border-gray-100 text-center">Điểm</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody id="practiceHistoryTable" class="divide-y divide-gray-50 text-gray-600">
+                                        <tr><td colspan="4" class="text-center py-10 text-gray-400 italic">Đang tải dữ liệu...</td></tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
             <div id="tab-classes" class="tab-content hidden animate-fade-in">
-                <div class="mb-6 flex flex-col md:flex-row md:items-end justify-between gap-4">
                     <div>
                         <h2 class="text-3xl font-black text-gray-800 mb-1">Lớp học của tôi</h2>
                         <p class="text-gray-500 text-sm">Danh sách các lớp bạn đang tham gia</p>
